Fix message alignment

--- a/mobile/src/Home/VaccinationStatus/index.scss
+++ b/mobile/src/Home/VaccinationStatus/index.scss
@@ -7,4 +7,8 @@
   .normal {
     color: dodgerblue;
   }
+
+  .limit-message {
+    font-size: 14px;
+  }
 }
